--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 </head>
 <body>
     <script src="index.js"></script>
+
+    <!-- Bloco Superior - Hearder -->
     <header id="Bloco_Header">
         <h1 id="t1">Tradição em projetos de arquitetura</h1>
         <p id="t2">Arquitetura residencial e comercial</p>
     </header>
+
+    <!-- Bloco Superior - Informacional -->
     <div id="Bloco_Info">
         <div id="Bloco_InfoCol">
             <p id="t3">850</p>
@@ -30,6 +34,8 @@
             <p id="t4">m² em projetos construídos</p>
         </div>
     </div>
+
+    <!-- Bloco Mediano - História -->
     <div id="Bloco_Historia">
         <div id="Bloco_Historia_t">
             <h2 id="Bloco_Historia_h">Arquitetos com história e experiência</h2>
@@ -41,6 +47,8 @@
         </div>
         <img src="img/Foto.svg" alt="" id="Bloco_Historia_f">
     </div>
+
+    <!-- Bloco Inferior - Formulário -->
     <form action="https://api.sheetmonkey.io/form/tLADWm8LwWx3inRMkNNmWi" method="post">
         <div id="Bloco_Form">
             <h3 id="Bloco_Form_h">Conheça mais sobre nossos serviços:</h3>
