--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     </header>
 
     <!-- Bloco Superior - Informacional -->
-    <div id="Bloco_Info">
-        <div id="Bloco_InfoCol">
-            <p id="t3">850</p>
-            <p id="t4">empreendimentos construídos</p>
+    <div class="Bloco_Info">
+        <div class="Bloco_InfoCol">
+            <p class="t3">850</p>
+            <p class="t4">empreendimentos construídos</p>
         </div>
-        <div id="Bloco_InfoCol">
-            <p id="t3">40</p>
-            <p id="t4">anos de mercado e experiência</p>
+        <div class="Bloco_InfoCol">
+            <p class="t3">40</p>
+            <p class="t4">anos de mercado e experiência</p>
         </div>
-        <div id="Bloco_InfoCol">
-            <p id="t3">2,000,000</p>
-            <p id="t4">m² em projetos construídos</p>
+        <div class="Bloco_InfoCol">
+            <p class="t3">2,000,000</p>
+            <p class="t4">m² em projetos construídos</p>
         </div>
     </div>
 
